# shira

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  renovate.json  requirements.txt  shira_ui.py
.github/: renovate.json
.github/workflows/: main.yml  publish.yml
gytmdl/: __main__.py  cli.py  dl.py  metadata.py  server.py  tagging.py
mbtag/: README.md  __main__.py  musicbrainz.py
scripts/: release.sh
shiradl/: __main__.py  albumcovergen.py  cli.py  dl.py  mbtag.py  metadata.py  musicbrainz.py  patch_mp4tags.py  server.py  tagging.py  util.py
solidui/src/: App.tsx  types.d.ts
tests/: conftest.py  download.test.py  integration.test.py  metadata.test.py  smoke.test.py  test_config.json  test_e2e.py  test_harness.py
