[project]
name = "shiradl"
description = "Download music from YouTube, YouTube Music and Soundcloud, with great metadata and little effort."
requires-python = ">=3.12"
authors = [{ name = "KraXen72" }, { name = "glomatico" }]
dependencies = [
	"click",
	"yt-dlp >= 2026.02.21",
	"ytmusicapi >= 1.10.2",
	"mediafile",
	"pillow",
	"requests_cache",
	"python-dateutil",
]
optional-dependencies.dev = [
	"pytest",
	"pytest-timeout",
	"inline-snapshot",
	"taskipy",
]

readme = "README.md"
dynamic = ["version"]

[project.scripts]
shiradl = "shiradl.cli:cli"
mbtag = "shiradl.mbtag:mbtag_cli"

[project.urls]
repository = "https://github.com/KraXen72/shira"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = ["*.test.py", "test_*.py"]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "--import-mode=importlib -s"
markers = [
	"metadata: tests requiring network access",
	"download: tests that perform actual file downloads",
]

[tool.taskipy.tasks]
"test:meta" = "pytest tests/metadata.test.py -v -x"
"test:dl" = "pytest tests/download.test.py -v -x"
