[project]
name = "shiradl"
version = "1.8.2"
description = "Download music from YouTube, YouTube Music and Soundcloud, with great metadata and little effort."
requires-python = ">=3.11"
authors = [{ name = "KraXen72" }, { name = "glomatico" }]
dependencies = [
	"click",
	"yt-dlp >= 2026.02.21",
	"ytmusicapi >= 1.10.2",
	"mediafile",
	"pillow",
	"requests_cache",
	"python-dateutil",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout",
    "inline-snapshot",
    "taskipy"
]

[project.scripts]
shiradl = "shiradl.cli:cli"
mbtag = "shiradl.mbtag:mbtag_cli"

[project.urls]
repository = "https://github.com/KraXen72/shira"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests/"]

[tool.pytest.ini_options]
python_files = ["*.test.py", "test_*.py"]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "--import-mode=importlib -s"
markers = [
	"download: tests that perform actual file downloads",
	"metadata: tests requiring network access",
	"smoke: basic sanity-check tests, checking both metadata & download size"
]

[tool.taskipy.tasks]
"test:dl" = "pytest tests/download.test.py -v -x"
"test:meta" = "pytest tests/metadata.test.py -v -x"
"test:smoke" = "pytest tests/smoke.test.py -v -x"
